--- a/MarketManagementSystem.csproj
+++ b/MarketManagementSystem.csproj
@@ -174,6 +174,9 @@
     <EmbeddedResource Include="Satis.resx">
       <DependentUpon>Satis.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Tedarikciler.resx">
+      <DependentUpon>Tedarikciler.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Urunler.resx">
       <DependentUpon>Urunler.cs</DependentUpon>
     </EmbeddedResource>
