--- a/MarketManagementSystem.csproj
+++ b/MarketManagementSystem.csproj
@@ -72,6 +72,12 @@
     <Compile Include="Irsaliye.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="MarketKarZarar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MarketKarZarar.Designer.cs">
+      <DependentUpon>MarketKarZarar.cs</DependentUpon>
+    </Compile>
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,6 +101,12 @@
     </Compile>
     <Compile Include="Musteri.cs">
       <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="MusteriBazliRapor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MusteriBazliRapor.Designer.cs">
+      <DependentUpon>MusteriBazliRapor.cs</DependentUpon>
     </Compile>
     <Compile Include="MusteriBorcOdeme.cs">
       <DependentUpon>Model1.tt</DependentUpon>
@@ -140,6 +152,12 @@
     <Compile Include="sysdiagram.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="TarihArasiTrend.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TarihArasiTrend.Designer.cs">
+      <DependentUpon>TarihArasiTrend.cs</DependentUpon>
+    </Compile>
     <Compile Include="Tedarikci.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -152,14 +170,32 @@
     <Compile Include="Tedarikciler.Designer.cs">
       <DependentUpon>Tedarikciler.cs</DependentUpon>
     </Compile>
+    <Compile Include="TopluMusteriBorc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="TopluMusteriBorc.Designer.cs">
+      <DependentUpon>TopluMusteriBorc.cs</DependentUpon>
+    </Compile>
     <Compile Include="Urun.cs">
       <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="UrunKarZarar.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UrunKarZarar.Designer.cs">
+      <DependentUpon>UrunKarZarar.cs</DependentUpon>
     </Compile>
     <Compile Include="Urunler.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Urunler.Designer.cs">
       <DependentUpon>Urunler.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UrunListCoktanAza.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UrunListCoktanAza.Designer.cs">
+      <DependentUpon>UrunListCoktanAza.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="BorcOdeme.resx">
       <DependentUpon>BorcOdeme.cs</DependentUpon>
@@ -182,6 +218,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Raporlama.resx">
+      <DependentUpon>Raporlama.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Satis.resx">
       <DependentUpon>Satis.cs</DependentUpon>
     </EmbeddedResource>
