Müşteri bazlı rapor formu hazırland ve fonksiyonları aktifleştirildi. Projenin genel tasarımı düzenlendi.

--- a/MarketManagementSystem.csproj
+++ b/MarketManagementSystem.csproj
@@ -221,6 +221,9 @@
     <EmbeddedResource Include="Raporlama Formları\MarketKarZarar.resx">
       <DependentUpon>MarketKarZarar.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Raporlama Formları\MusteriBazliRapor.resx">
+      <DependentUpon>MusteriBazliRapor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Raporlama Formları\TopluMusteriBorc.resx">
       <DependentUpon>TopluMusteriBorc.cs</DependentUpon>
     </EmbeddedResource>
